welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:15: error: too many arguments for method droite: ()Unit
		droite(e)
                      ^